c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_parse/malformed_function_declarator_2.c

// You can't wrap a parameter list in multiple sets of parentheses
int foo((void));
